--- a/app/html/index.html
+++ b/app/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My application</title>
+    <title>My Application</title>
 </head>
 <body>
     <h1 style="justify-content: center; text-align: center; font-family: 'Courier New', Courier, monospace;">Hello Industrial Edge community! &#128516</h1>
